# Sleipnir

./: .gitignore  CMakeLists.txt
experiments/: CMakeLists.txt
experiments/Array_tests/: ArrayTests.cpp  CMakeLists.txt
experiments/SimpleRun/: CMakeLists.txt  simpleRun.cpp
experiments/test1/: CMakeLists.txt  test1.cpp
src/: CMakeLists.txt
src/data_arrays/: ArrayBase.hpp  ArrayCPU.cpp  ArrayCPU.hpp  ArrayGPU.cpp  ArrayGPU.hpp  CMakeLists.txt  StaticArrayBase.hpp  StaticArrayCPU.cpp  StaticArrayCPU.hpp  StaticArrayGPU.cpp  StaticArrayGPU.hpp
src/main/: CMakeLists.txt  main.cpp  main.hpp
src/tasks/: CMakeLists.txt  patch.cpp  patch.hpp  task.cpp  task.hpp
src/timing/: CMakeLists.txt  timing.cpp  timing.hpp
